--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-image": "^4.0.3",
+    "react-paginate": "^7.1.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
