--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL="https://localhost:3007/backend/api/v1/"
-REACT_APP_IMAGE_URL="https://localhost:3007/backend/api/"
+REACT_APP_BASE_URL="http://localhost:3007/backend/api/v1/"
+REACT_APP_IMAGE_URL="http://localhost:3007/backend/api/"
