--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
+    "sass": "^1.43.4",
     "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
