--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "dotenv": "^8.2.0",
@@ -18,6 +19,7 @@
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-image": "^4.0.3",
+    "react-overlays": "^5.1.1",
     "react-paginate": "^7.1.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
