--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_BASE_URL="https://talkagram-backend.herokuapp.com//backend/api/v1/"
-REACT_APP_IMAGE_URL="https://talkagram-backend.herokuapp.com//backend/api/"
+REACT_APP_IMAGE_URL="https://talkagram-backend.herokuapp.com//backend/api/" 
+REACT_APP_URL="https://talkagram-backend.herokuapp.com"
