--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "dotenv": "^8.2.0",
+    "framer-motion": "^5.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
