--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-REACT_APP_BASE_URL="https://talkagram-backend.herokuapp.com/backend/api/v1/"
-REACT_APP_IMAGE_URL="https://talkagram-backend.herokuapp.com/backend/api/" 
-REACT_APP_URL="https://talkagram-backend.herokuapp.com"
+REACT_APP_BASE_URL="http://localhost:3007/backend/api/v1/"
+REACT_APP_IMAGE_URL="http://localhost:3007/backend/api/" 
+REACT_APP_URL="http://localhost:3007"
+
+
+# REACT_APP_BASE_URL="https://talkagram-backend.herokuapp.com/backend/api/v1/"
+# REACT_APP_IMAGE_URL="https://talkagram-backend.herokuapp.com/backend/api/" 
+# REACT_APP_URL="https://talkagram-backend.herokuapp.com"
