--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-paginate": "^7.1.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
